# skeletonService

./: .env.example  .gitignore  LICENSE  README.md  Storage.md  database.py  main.py  pyproject.toml  run_tests.py
Presentation/: Plan.txt
api/: routes.py
exceptions/: custom_exceptions.py
models/: request_models.py
repositories/: skeleton_repository.py
services/: hash_service.py  ppt_service.py  pptx_builder.py  skeleton_service.py  storage_loader.py
templates/: AlphaRainbow - process.yaml  Best competitor.pptx  Best competitor.yaml  Contents - 2.pptx  Contents - 3.yaml  Contents - 4.pptx  Contents - 5.pptx  Final sheet.pptx  Front slide.yaml  Goal and motivation.pptx  Gpt summary.pptx  Gpt summary.yaml  Implementation - IOGSM.pptx  Implementation - drivers.pptx  NPS & response - development - higher level.yaml  NPS & response - development - lower level.yaml  NPS motivation - quotes.yaml  NPS motivation.yaml  One pager - back - revenue.yaml  One pager - front - cohort - coverage.pptx  One pager - front - cohort - coverage.yaml  One pager - front.yaml  One thing to change - quotes.yaml  Process results.yaml  Product familiarity.yaml  Recommendations - driver & specific.yaml  Statements - development.yaml  Statements - drivers - development.yaml  Statements - drivers.yaml  Summary.yaml  Table - NPS.yaml  Table - contacts.yaml  Table - invited.yaml  Trends.yaml  index.html
tests/: test_api.py  test_hash_service.py  test_request_models.py  test_skeleton_service.py  test_storage_loader.py  test_validators.py
utils/: exxample.json  hashing.py  local_storage.py  logger.py  mongo_serializer.py  (+2 more)
(+113 files in other folders)
