[project]
name = "skeleton-service"
version = "1.0.0"
description = "FastAPI service for generating and caching merged PowerPoint skeleton presentations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "groupdocs-conversion-cloud>=25.3",
    "groupdocs-merger-cloud>=25.3",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    ".venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
